@@ -11,6 +11,12 @@ postgresql-common (125) UNRELEASED; urgency=low
   * pg_upgradecluster: Add --logfile option to specify a custom log file for
     the upgraded cluster. Necessary if you want to run this on
     per-user clusters and can't write into /var/log/postgresql/.
+  * pg_ctlcluster: When starting as root for >= 9.1, adjust the OOM killer
+    protection to -16, so that the postmaster does not get OOM-killed so
+    easily (as it appears to claim all the shared memory). 9.1.1-3 and later
+    resets oomadj of child processes to 0, so that the client backends can
+    still get OOM-killed. Add tests to t/020_create_sql_remove.t.
+    (LP: #854590)
 
  -- Martin Pitt <mpitt@debian.org>  Sat, 08 Oct 2011 12:16:13 +0200
 
